--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Airplanes'
 - !lcsh 'Langley, S. P. (Samuel Pierpont), 1834-1906'
 - !lcc 'TL'
+- GITenberg
 title: 'The First Man-Carrying Aeroplane Capable of Sustained Free Flight: Langley''s
   Success as a Pioneer in Aviation
 
